--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2417,107 +2417,107 @@ stories:
   domain: http://www.freemansd.com/
   link: https://www.freemansd.com/content/have-you-visited-freeman-farmers-market
 images:
-- name: castle-wall-DSC-0067.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067.JPG
-- name: wind-mills-windmills-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alberto-giacometti.jpg
-- name: hollywood-building-hollywood-building-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dry-skin.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
-- name: hollywood-building-hollywood-building-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-matrix.jpg
-- name: gears-4882162452-fa3126b38d-b-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-yellow-collage.jpg
-- name: machine-road-machine-road-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-- name: old-house-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-crafty-painting.jpg
-- name: border-fence-border-fence-on-hill.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill.jpg
-- name: capital-battle-capitolbattle-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crabapple.jpg
-- name: razorwire-DSC-0080-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
-- name: white-house-lawn-white-house-lawn-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-mucha-mult.jpg
-- name: statue-of-liberty-front-view-statueofliberty-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-hot-spicy.jpg
-- name: powerlines-power-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dali-three.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-storm.jpg
-- name: flower-barbed-wire-flower-barbed-wire-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-space-pizza.jpg
-- name: dc-statue-dcstatue-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-rainbow-festival.jpg
-- name: gypsymosaic-gypsy-eyes-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-diego-rivera1.jpg
-- name: containership-bw-storytelling.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling.png
-- name: bluelake-green-zuma-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-01-17-38.jpg
-- name: old-school-house-old-schoolhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
-- name: curtain-curtain-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crabapple.jpg
-- name: oldroad-old-road-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
-- name: docks-docks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks.jpg
-- name: status-berlin-status-berlin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crabapple.jpg
-- name: fence-fence-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-deep-connections.jpg
-- name: white-house-lawn-white-house-lawn-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-collage.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
-- name: downtown-los-angeles-downtown-la-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-clean-view.JPG
-- name: beach-rocks-beach-rocks-currents-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-rainbow-festival.jpg
-- name: berlinwall-DSC-0084-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-pond.jpg
-- name: udnie-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-constitution.jpg
-- name: subway-subway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-marcel-duchamp.jpg
-- name: aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
-- name: powerlines-power-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-dream.jpg
-- name: fence-mexico-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-emily-carr.jpg
-- name: legal-statue-legalstatue-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-neo-instinct.jpg
-- name: statue-of-liberty-front-view-statueofliberty-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crabapple.jpg
-- name: oldbarn-oldbarn-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crabapple.jpg
-- name: old-cabin-oldcabin-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-diego-rivera1.jpg
-- name: dc-statue-dcstatue-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
-- name: oldhousecars-house-old-cars-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crabapple.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alberto-giacometti.jpg
-- name: christianity-christianity-under-construction-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-3.jpg
-- name: eduardo-eduardo-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-space-pizza.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-- name: border-crossing-bordercrossing-purple-pond.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purple-pond.png
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: supreme-court-supremecourt-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sunday.jpg
+- name: sand-hand-sand-hand-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
+- name: fence-bw-fist-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-blue-circuit.png
+- name: birdhouse-birdhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dali-two.jpg
+- name: stories-losangeles-from-observatory-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-losangeles-from-observatory-free-woman.jpg
+- name: hollywood-building-hollywood-building-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-aqua.jpg
+- name: power-lines-power-lines-empty-space-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-neo-instinct.jpg
+- name: subway-subway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
+- name: bluelake-clean-view-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-01-17-38.jpg
+- name: mosaic-face-mosaic-face-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dry-skin.jpg
+- name: old-barn-old-barn-1500-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-umberto-bocc.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit-2.jpg
+- name: amusement-park-amusement-park-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-constitution.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
+- name: old-door-lock-old-door-lock-2-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-gan-vogh.jpg
+- name: abandonedbuildings_pablo_blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_pablo_blue.jpg
+- name: bluelake-colorful-dream-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-00-00.jpg
+- name: trucksilo-trucksilo-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crabapple.jpg
+- name: nyc-flag-nycflag-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
+- name: aws-s3-stories-methuselah-mountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-methuselah-mountain.jpg
+- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
+- name: aws-s3-stories-capital-battle-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capital-battle-internet-numbers.jpg
+- name: catacombs-catacombs-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-neo-instinct.jpg
+- name: curtain-curtain-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crunch-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
+- name: christianity-christianity-under-construction-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crunch-paper.jpg
+- name: aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+- name: downtown-los-angeles-downtown-la-blue-circuit-3.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-3.JPG
+- name: store-on-corner-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
+- name: blossombar-clean-view-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-00-00.jpg
+- name: old-barn-old-barn-1500-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-monet-one.jpg
+- name: ellis-island-ellis-island-room-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sand-paper.jpg
+- name: blossombar-blossombar-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still-2560.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-satan-red.jpg
+- name: downtheline-downtheline-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-pablo-blue.jpg
+- name: fence-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-ww2-dresden.jpg
+- name: carry-load-carryload-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kandinsky-bv.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+- name: old-church-oldchurch-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-clean-view.jpg
+- name: old-gas-pumps-oldgaspumps-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-dream.jpg
+- name: gypsymosaic-gypsy-eyes-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-pond.jpg
+- name: berlinwall2-berlinwall-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-rain.jpg
+- name: curtain-curtain-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smooth-ride.jpg
+- name: carry-load-carryload-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-yellow-collage.jpg
+- name: ellis-island-ellisisland-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crabapple.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+- name: legal-statue-legalstatue-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-rain.jpg
+- name: downtown-trucksilo-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-yellow-paper.jpg
+- name: ellis-island-ellis-island-room-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-bright-sand.jpg
+- name: gypsy-wagon-gypsywagon-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-alberto-giacometti.jpg
+- name: docks-docks-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-three.jpg
 ---
 Letters To The Editor.&nbsp;Border Arrests Drop As Mexico Crackdown Appears To Cut Crossings.&nbsp;'Midsommar' Scares In Ways Other Horror Films Won't.&nbsp;Booker Speechless Over McConnell Slaveholder Comment.&nbsp;Mercer Residents Get To Experience Shakertown Free For One Week.&nbsp;Colin Hanks Posts Michael Keaton Picture To Mark Dad Tom Hanks' Birthday.&nbsp;Sam's Field First Season.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;
